; ModuleID = '/home/carl/AnghaBench/micropython/lib/libm/extr_math.c___expo2f.c'
source_filename = "/home/carl/AnghaBench/micropython/lib/libm/extr_math.c___expo2f.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@k = common dso_local global i32 0, align 4
@kln2 = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local float @__expo2f(float %0) #0 {
  %2 = alloca float, align 4
  %3 = alloca float, align 4
  store float %0, float* %2, align 4
  %4 = load float, float* %3, align 4
  %5 = load i32, i32* @k, align 4
  %6 = sdiv i32 %5, 2
  %7 = add nsw i32 127, %6
  %8 = shl i32 %7, 23
  %9 = call i32 @SET_FLOAT_WORD(float %4, i32 %8)
  %10 = load float, float* %2, align 4
  %11 = load i64, i64* @kln2, align 8
  %12 = sitofp i64 %11 to float
  %13 = fsub float %10, %12
  %14 = fptosi float %13 to i64
  %15 = call float @expf(i64 %14)
  %16 = load float, float* %3, align 4
  %17 = fmul float %15, %16
  %18 = load float, float* %3, align 4
  %19 = fmul float %17, %18
  ret float %19
}

declare dso_local i32 @SET_FLOAT_WORD(float, i32) #1

declare dso_local float @expf(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
